--- a/src/global.scss
+++ b/src/global.scss
@@ -26,3 +26,10 @@ $font-size-h1: 50px;
 $font-size-h2: 40px;
 $font-size-text: 25px;
 $font-size-label:16px;
+
+/* Breakpoint bootstrap  */
+$screen-xs-min: 480px;
+$screen-sm-min: 768px;
+$screen-md-min: 992px;
+$screen-lg-min: 1200px;
+$screen-xl-min: 1600px;
