Slider and some mods

--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -3,7 +3,7 @@
 
 .about{
     height: 50vh;
-    margin-top: 5rem;
+    margin-top: 4rem;
 }
 .box-content-1{
 
@@ -22,6 +22,7 @@
 }
 .about-title--variant{
     color: $color-primary-light;
+    margin-top: 0 !important;
     
 }
 
