creating component footer

--- a/src/global.scss
+++ b/src/global.scss
@@ -15,6 +15,7 @@ $gradient-blue-light:linear-gradient(180deg, rgba(65, 128, 202, 0.5) 0%, rgba(13
 $gradient-purple-light:linear-gradient(180deg, rgba(132, 94, 194, 0.5) 0%, rgba(132, 94, 194, 0.0109377) 94.17%, rgba(132, 94, 194, 0.0109377) 99.99%, rgba(132, 94, 194, 0) 100%);
 /* Typography */
 $font-base:'Poppins', sans-serif;
+$font-base-label:300;
 $font-base-regular: 400;
 $font-base-bold: 700;
 $font-base-semibold: 600;
