--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -1,27 +1,28 @@
 @import '../../global.scss';
 
-
 .about{
-    height: 60vh;
-    margin-top: 4rem;
-}
-.box-content-1{
-
-}
-.box-content-2{
     display: flex;
+    justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
     width: 100%;
+}
+
+.text-about{
+    display: flex;
+    text-align: left;
+    letter-spacing: 1px;
+    line-height: 2;
     font-size: $font-size-text;
 }
 .about-title{
     font-size: $font-size-h2;
     font-weight: $font-base-extrabold;
+
 }
 .about-title--variant{
     color: $color-primary-light;
-    margin-top: 0 !important;
+    
 }
 
 @media screen and (max-width: $screen-sm-min){
@@ -29,10 +30,9 @@
         font-size: 30px;    
         text-align: center;
     }
-    .box-content-2{
-        font-size: 18px;
+    .text-about{
+        font-size: 20px;
         text-align: center;
     }
-
 }
     
