--- a/src/components/Technologies/technologies.scss
+++ b/src/components/Technologies/technologies.scss
@@ -1,6 +1,12 @@
 @import '../../global.scss';
 
-
+.technologies{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
 .list-tech {
   display: flex;
   flex-wrap: wrap;
