--- a/src/components/Technologies/technologies.scss
+++ b/src/components/Technologies/technologies.scss
@@ -1,13 +1,19 @@
 @import '../../global.scss';
 
-
+.technologies{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
 .list-tech {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   width: 100%;
   align-items: center;
-
+  margin:40px 0;
   height: 100%;
   position: relative;
   .circle-border{
