--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -15,6 +15,7 @@
         .formulario { 
             display: flex;
             flex-direction: column;
+            position: relative;
             .title {
                 font-family: Poppins;
                 font-style: normal;
@@ -68,6 +69,20 @@
                     }
                 }
             }
+            .pop {
+                width: 80%;
+                height: 200px;
+                background: #80ABFE;        
+                border-radius: 30px; 
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                padding: 50px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+                margin: auto;
+            }
         }
     }
     .datos {
@@ -83,6 +98,8 @@
             margin-top: 20px;
             margin-bottom: 20px;
             font-weight: 700;
+            font-size: 16px;
+
         }
     }
 }
